; ModuleID = '/home/carl/AnghaBench/disque/src/extr_disque-cli.c_ustime.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_disque-cli.c_ustime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @ustime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ustime() #0 {
  %1 = alloca %struct.timeval, align 8
  %2 = alloca i64, align 8
  %3 = call i32 @gettimeofday(%struct.timeval* %1, i32* null)
  %4 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = mul nsw i64 %5, 1000000
  store i64 %6, i64* %2, align 8
  %7 = getelementptr inbounds %struct.timeval, %struct.timeval* %1, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %2, align 8
  %10 = add nsw i64 %9, %8
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* %2, align 8
  ret i64 %11
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
